Dev/src/FinancialForce Revenue Management/objects/SettingsTestObject__c.object
<CustomObject>
    <fields>
        <fullName>Balance_sheet__c</fullName>
        <label>Balance sheet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed__c</fullName>
        <label>Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Balance_Sheet__c</fullName>
        <label>Cost Balance Sheet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <label>Cost Centre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Cost_Center__c</fullName>
        <label>Cost Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Income_Statement__c</fullName>
        <label>Cost Income Statement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyFieldType__c</fullName>
        <label>CurrencyFieldType</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrencyLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CurrencyLookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dummy Invoices</relationshipLabel>
        <relationshipName>SettingsTestObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTimeField__c</fullName>
        <label>DateTimeField</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Statement__c</fullName>
        <label>Income Statement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LongTextArea__c</fullName>
        <label>LongTextArea</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Percent_completed__c</fullName>
        <label>Percent completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <label>Practice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettingsTestObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dummy Invoice</label>
        <referenceTo>SettingsTestObject__c</referenceTo>
        <relationshipLabel>Dummy Invoices</relationshipLabel>
        <relationshipName>SettingsTestObjects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TextArea__c</fullName>
        <label>TextArea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>another_number__c</fullName>
        <label>another number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>completebox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>completebox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>completelist__c</fullName>
        <label>completelist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>complete</fullName>
                </value>
                <value>
                    <fullName>incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>encrypted_date__c</fullName>
        <label>encrypted date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>encrypted_text__c</fullName>
        <label>encrypted text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>end_date__c</fullName>
        <label>end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffrrtemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>Dummy Invoices</relationshipLabel>
        <relationshipName>SettingsTestObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>number__c</fullName>
        <label>number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>picklist__c</fullName>
        <label>picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>value1</fullName>
                </value>
                <value>
                    <fullName>value2</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>richText__c</fullName>
        <label>richText</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <label>text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>units__c</fullName>
        <label>units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dummy Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dummy Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>